# rust_bin

./: .env  Cargo.toml
src/: index.html  main.rs
src/handlers/: get.rs  mod.rs  post.rs  site.rs
