[package]
name = "rust_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
axum = "0.6.20"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "tls-rustls", "postgres"]}
serde = "1.0.190"
tower-http = { version = "0.4.4", features = ["cors"]}
http = "0.2.9"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
dotenv = "0.15.0"
